discussion/kv_engine/175331/175331_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Cancel scans that have existed for too long

A RangeScan cannot 'exist' indefinitely as storage cannot
be released by compaction. This commit simplifies some of the
ideas around force cancelling a 'slow' scan (what is slow?) and
takes the approach that a scan cannot exist for a fixed amount
of time, i.e. scans should really be completed in that limit, a
client could always resume a scan that was incomplete. A time
limit is picked, yet it is possible  that a scan could be progressing
at maximum speed, yet it's just so big it doesn't fit in the limit and
for now accept that as a limitation of the approach.

Create a task that will check RangeScans and cancel them if
they have existed for too long (180 seconds).

The task will sleep 'forever' if no scans exist or will sleep
until the next 'nearest' RangeScan that may exceed the 180 seconds
limit.

* needs more tests *

Change-Id: I409b00ab08772fa36af8f2fad83c0b083fe26165

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-25 09:50:31.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-25 10:54:45.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46435/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_max_continue_tasks from stat group 
Unexpected stat: ep_range_scan_max_lifetime from stat group 
Unexpected stat: ep_range_scan_max_continue_tasks from stat group config
Unexpected stat: ep_range_scan_max_lifetime from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7835 Test failed: `stats error" (missing stats)
(42 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46435/ )

Failure of GoogleTest "RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan":

<pre>
[ RUN      ] RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan
unknown file: error: C++ exception with description "MockServer::send_response unimplemented" thrown in the test body.
[  FAILED  ] RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan, where GetParam() = ("persistent_couchdb", "value_only", "key_scan") (29 ms)
RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46435/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17766/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_watch_dog.cc:32:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->snoozeAndWait(
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17766/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_watch_dog.cc:32:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17766/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39019/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_watch_dog.cc:32:9:
error: use of undeclared identifier "ExecutorPool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39019/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7481/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_max_continue_tasks from stat group 
[2022-05-25T10:03:55.275Z] Unexpected stat: ep_range_scan_max_lifetime from stat group 
[2022-05-25T10:03:55.275Z] Unexpected stat: ep_range_scan_max_continue_tasks from stat group config
[2022-05-25T10:03:55.275Z] Unexpected stat: ep_range_scan_max_lifetime from stat group config
[2022-05-25T10:03:55.275Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7835 Test failed: `stats error" (missing stats)
[2022-05-25T10:03:55.275Z] (42 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7481/ )

Failure of GoogleTest "RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan":

<pre>
[ RUN      ] RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan
[2022-05-25T10:03:42.780Z] unknown file: Failure
[2022-05-25T10:03:42.780Z] C++ exception with description "MockServer::send_response unimplemented" thrown in the test body.
[2022-05-25T10:03:42.780Z] [  FAILED  ] RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan, where GetParam() = ("persistent_couchdb", "value_only", "key_scan") (4 ms)
RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7481/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18743/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_max_continue_tasks from stat group 
[2022-05-25T10:18:03.057Z] Unexpected stat: ep_range_scan_max_lifetime from stat group 
[2022-05-25T10:18:03.057Z] Unexpected stat: ep_range_scan_max_continue_tasks from stat group config
[2022-05-25T10:18:03.057Z] Unexpected stat: ep_range_scan_max_lifetime from stat group config
[2022-05-25T10:18:03.057Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7835 Test failed: `stats error" (missing stats)
[2022-05-25T10:18:03.057Z] (42 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18743/ )

Failure of GoogleTest "RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan":

<pre>
[ RUN      ] RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan
[2022-05-25T10:23:04.991Z] unknown file: Failure
[2022-05-25T10:23:04.991Z] C++ exception with description "MockServer::send_response unimplemented" thrown in the test body.
[2022-05-25T10:23:04.991Z] [  FAILED  ] RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan, where GetParam() = ("persistent_couchdb", "value_only", "key_scan") (10 ms)
RangeScanFullAndValueEviction/RangeScanTest.concurrency_maxxed/persistent_couchdb_value_only_key_scan
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19897/ : FAILURE

Compile error at [2022-05-25T10:38:16.236Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19897/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7380/ : FAILURE

Compile error at [2022-05-25T10:31:19.392Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7380/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20558/ : FAILURE

Compile error at [2022-05-25T10:28:30.761Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20558/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27944/ : FAILURE

Compile error at [2022-05-25T10:54:16.056Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6240" "Bucket size changed, the reset test must be updated with the new members"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27944/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19548/ : FAILURE

Compile error at [2022-05-25T10:44:50.618Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/buckets_test.cc:18:34:
error: static assertion failed: Bucket size changed, the reset test must be updated with the new members
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19548/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16800/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
